--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
     box-sizing: border-box;
 }
 
-
-
 body *{
     line-height: 160%; /*Altura da linha (Aumentar)*/
 }
@@ -18,6 +16,33 @@ body{
     background-color: #121214; /*Cor exadecimal, para fundo*/ 
 }
 
+
+
+header{
+    padding-top: 32px;
+    text-align: center; /*Tudo que se identifica como texto, foto, é centralizado*/
+}
+
+header div{
+    width: 170px;
+    margin: auto;
+    background-image: linear-gradient(90deg, #9572fc 0%, rgb(168, 230, 140) 50%, rgba(133, 0, 0, 0.74) 100%);
+    border-radius: 50%;
+    display: flex; /*Alinha o fundoc om a foto*/
+    padding:4px;
+    transition: transform .3s;
+}
+
+header div:hover{
+    
+    transform: scale(1.2);
+}
+
+header img{
+    width: 100%;
+    border-radius: 50%;
+}
+
 main{
     
     /* border: 1px solid red; */
@@ -27,7 +52,7 @@ main{
 
      display: grid;
      gap: 24px;
-     margin-top: 32px;
+     margin: 32px auto;
 }
 
 ul{
@@ -37,6 +62,7 @@ ul{
     margin-top: 24px;
 
     flex-wrap: wrap;
+    
 
 }
 
@@ -55,6 +81,7 @@ section div{
     padding: 32px;
     padding-top: 24px;
     border-radius: 8px;
+    
 }
 
 section h2{
@@ -67,6 +94,11 @@ section p{
     color: #a1a1aa;
 }
 
+section ul li:hover{
+    transform: scale(1.1);
+    transition: transform .3s;
+}
+
 .games-list img{
     border-radius: 8px; /*Bordinha da imagem 8px*/
     width: 90px; /*Diminui a largura da imagem*/
@@ -76,4 +108,6 @@ section p{
 .channel-list img {
     border-radius: 50%; /*arredonda a borda*/
     width: 70px;  /*Diminui o tamanho da imagem*/
+   
+    
 }
