--- a/filmes.css
+++ b/filmes.css
@@ -112,10 +112,11 @@ section ul li:hover{
     
 }
 
-button a {
+li a {
+    text-align: center;
     text-decoration: none;
-    color: rgb(228, 0, 0);
-    font-size: 20px;
+    color: rgb(187, 3, 3);
+    font-size: 23px;
     font-weight: 950;
     font-style: oblique;
 }
