--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ section ul li:hover{
    
     
 }
-button a {
+li a {
     text-decoration: none;
     color: rgb(228, 0, 0);
     font-size: 20px;
